--- a/package.json
+++ b/package.json
@@ -2,19 +2,16 @@
   "name": "chai-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
- "scripts": {
-  "dev": "nodemon src/index.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
-
+  "main": "src/index.js",
+  "scripts": {
+    "dev": "nodemon src/index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "devDependencies": {
-    "nodemon": "^3.1.11",
-    "prettier": "^3.7.4"
+    "nodemon": "^3.1.11"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
